--- a/Pages/Students/Index.cshtml
+++ b/Pages/Students/Index.cshtml
@@ -2,34 +2,22 @@
 @model SchoolManager.Pages.Students.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Students";
 }
 
-<h1>Index</h1>
+<h1>Students</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add Student</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Student[0].FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].LastName)
+                @Html.DisplayNameFor(model => model.Student[0].Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Student[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].Street)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].StreetNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].ZipCode)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Student[0].City)
@@ -41,22 +29,10 @@
 @foreach (var item in Model.Student) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Street)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.City)
