--- a/Pages/Teachers/Index.cshtml
+++ b/Pages/Teachers/Index.cshtml
@@ -2,34 +2,22 @@
 @model SchoolManager.Pages.Teachers.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Teachers";
 }
 
-<h1>Index</h1>
+<h1>Teachers</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add Teacher</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Teacher[0].FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Teacher[0].LastName)
+                @Html.DisplayNameFor(model => model.Teacher[0].Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Teacher[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Teacher[0].Street)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Teacher[0].StreetNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Teacher[0].ZipCode)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Teacher[0].City)
@@ -41,22 +29,10 @@
 @foreach (var item in Model.Teacher) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Street)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.City)
